correction security config